card section done

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 <body class="font-family-lato">
     <!-- Header Section Start Here  -->
-    <header class="container mx-auto mt-12">
-        <nav class="flex justify-between items-center bg-white md:bg-color py-8 md:border md:rounded-full mb-14">
+    <header class="container mx-auto mt-2 md:mt-10">
+        <nav
+            class="flex justify-between items-center bg-white md:bg-color py-8 md:border md:rounded-full mb-5 md:mb-14">
             <ul class="lg:flex font-bold text-white gap-8 pl-14 hidden">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
@@ -140,7 +141,7 @@
                 </div>
             </div>
             <!-- 4th Slide  -->
-            <div id="slide4" class="carousel-item w-full">
+            <div id="slide4" class="carousel-item relative w-full">
                 <div class="hero mx-5 h-48 md:h-auto lg:min-h-screen"
                     style="background-image: url('images/banner4.png');">
                     <div class="hero-overlay bg-opacity-60"></div>
@@ -192,7 +193,238 @@
     <!-- Header Section Ends Here  -->
     <!-- Main Section Start Here  -->
     <main class="container mx-auto">
+        <section class="container mx-auto mt-6">
+            <div class="flex flex-col md:flex-row justify-between px-3 md:gap-10 lg:gap-46">
+                <div class="text-center md:text-left lg:text-left space-y-5 mb-5">
+                    <h2 class="text-[#121212] text-5xl font-bold">Deal of the day</h2>
+                    <p class="text-base text-[#12121299] p-2 lg:w-[615px]">Contrary to popular belief, is not simply
+                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                        2000 years old.</p>
+                </div>
 
+                <div class="flex justify-center">
+                    <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                        <div class="flex flex-col">
+                            <span class="countdown font-mono text-3xl md:text-5xl lg:text-5xl">
+                                <span style="--value:15;"></span>
+                            </span>
+                            days
+                        </div>
+                        <i class="fa-solid fa-ellipsis-vertical text-2xl lg:text-3xl md:text-3xl"></i>
+                        <div class="flex flex-col">
+                            <span class="countdown font-mono  text-3xl md:text-5xl lg:text-5xl">
+                                <span style="--value:10;"></span>
+                            </span>
+                            hours
+                        </div>
+                        <i class="fa-solid fa-ellipsis-vertical text-2xl lg:text-3xl md:text-3xl"></i>
+                        <div class="flex flex-col">
+                            <span class="countdown font-mono  text-3xl md:text-5xl lg:text-5xl">
+                                <span style="--value:24;"></span>
+                            </span>
+                            min
+                        </div>
+                        <i class="fa-solid fa-ellipsis-vertical text-2xl lg:text-3xl md:text-3xl"></i>
+                        <div class="flex flex-col">
+                            <span class="countdown font-mono  text-3xl md:text-5xl lg:text-5xl">
+                                <span style="--value:34;"></span>
+                            </span>
+                            sec
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Card Section  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- Card 1  -->
+                <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
+                    <figure><img src="/images/fruit6.png" alt="Fruit" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
+                        <p class="text-base text-[#12121299]">Apples</p>
+                        <div class="rating flex justify-center mb-8 mt-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions justify-center">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="underline text-color text-lg font-bold"
+                                onclick="my_modal_5.showModal()">Details</button>
+                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                <form method="dialog" class="modal-box space-y-5">
+                                    <img class="mx-44" src="images/fruit6.png" alt="">
+                                    <h3 class="font-bold text-4xl">Apples</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+                                    <div class="rating flex justify-center mb-8 mt-6">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+
+                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                            <button class="btn text-color">Close</button>
+                                            <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2  -->
+                <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
+                    <figure><img src="/images/fruit7.png" alt="Fruit" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
+                        <p class="text-base text-[#12121299]">Orange</p>
+                        <div class="rating flex justify-center mb-8 mt-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions justify-center">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="underline text-color text-lg font-bold"
+                                onclick="my_modal_6.showModal()">Details</button>
+                            <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
+                                <form method="dialog" class="modal-box space-y-5">
+                                    <img class="mx-40" src="images/fruit7.png" alt="">
+                                    <h3 class="font-bold text-4xl">Red Dragon</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+                                    <div class="rating flex justify-center mb-8 mt-6">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+
+                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                            <button class="btn text-color">Close</button>
+                                            <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3  -->
+                <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
+                    <figure><img src="/images/fruit8.png" alt="Fruit" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
+                        <p class="text-base text-[#12121299]">Red Dragon</p>
+                        <div class="rating flex justify-center mb-8 mt-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions justify-center">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="underline text-color text-lg font-bold"
+                                onclick="my_modal_7.showModal()">Details</button>
+                            <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
+                                <form method="dialog" class="modal-box space-y-5">
+                                    <img class="mx-40" src="images/fruit8.png" alt="">
+                                    <h3 class="font-bold text-4xl">Orange</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+                                    <div class="rating flex justify-center mb-8 mt-6">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+
+                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                            <button class="btn text-color">Close</button>
+                                            <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 4  -->
+                <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
+                    <figure><img src="/images/fruit9.png" alt="Fruit" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
+                        <p class="text-base text-[#12121299]">Banana</p>
+                        <div class="rating flex justify-center mb-8 mt-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions justify-center">
+                            <!-- Open the modal using ID.showModal() method -->
+                            <button class="underline text-color text-lg font-bold"
+                                onclick="my_modal_8.showModal()">Details</button>
+                            <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
+                                <form method="dialog" class="modal-box space-y-5">
+                                    <img class="mx-40" src="images/fruit9.png" alt="">
+                                    <h3 class="font-bold text-4xl">Banana</h3>
+                                    <p class="py-4">Professional employees are there for you to pick the most amazing
+                                        and fresh fruits.</p>
+                                    <div class="rating flex justify-center mb-8 mt-6">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    </div>
+                                    <div class="modal-action">
+                                        <!-- if there is a button in form, it will close the modal -->
+
+                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                            <button class="btn text-color">Close</button>
+                                            <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
+                                                Now</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="flex justify-center mt-10">
+                <button class="btn bg-color w-36 h-16 text-white">Shop All</button>
+            </div>
+        </section>
+        <section class="container mx-auto mt-10">
+
+        </section>
     </main>
     <!-- Main Section Ends Here  -->
     <!-- footer Section Start Here  -->
