--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Card 1  -->
                 <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
-                    <figure><img src="/images/fruit6.png" alt="Fruit" /></figure>
+                    <figure><img src="images/fruit6.png" alt="Fruit" /></figure>
                     <div class="card-body text-center">
                         <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
                         <p class="text-base text-[#12121299]">Apples</p>
@@ -255,7 +255,7 @@
                                 onclick="my_modal_5.showModal()">Details</button>
                             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
-                                    <img class="mx-44" src="images/fruit6.png" alt="">
+                                    <img class=" mx-28 md:mx-40 lg:mx-44" src="images/fruit6.png" alt="">
                                     <h3 class="font-bold text-4xl">Apples</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
@@ -270,7 +270,7 @@
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
 
-                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                        <div class="flex justify-start items-center gap-8 mr-12 md:mr-20 lg:mr-24">
                                             <button class="btn text-color">Close</button>
                                             <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
                                                 Now</button>
@@ -283,7 +283,7 @@
                 </div>
                 <!-- Card 2  -->
                 <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
-                    <figure><img src="/images/fruit7.png" alt="Fruit" /></figure>
+                    <figure><img src="images/fruit7.png" alt="Fruit" /></figure>
                     <div class="card-body text-center">
                         <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
                         <p class="text-base text-[#12121299]">Orange</p>
@@ -300,7 +300,7 @@
                                 onclick="my_modal_6.showModal()">Details</button>
                             <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
-                                    <img class="mx-40" src="images/fruit7.png" alt="">
+                                    <img class="mx-28 md:mx-40 lg:mx-44" src="images/fruit7.png" alt="">
                                     <h3 class="font-bold text-4xl">Red Dragon</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
@@ -315,7 +315,7 @@
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
 
-                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                        <div class="flex justify-start items-center gap-8 mr-12 md:mr-20 lg:mr-24">
                                             <button class="btn text-color">Close</button>
                                             <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
                                                 Now</button>
@@ -328,7 +328,7 @@
                 </div>
                 <!-- Card 3  -->
                 <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
-                    <figure><img src="/images/fruit8.png" alt="Fruit" /></figure>
+                    <figure><img src="images/fruit8.png" alt="Fruit" /></figure>
                     <div class="card-body text-center">
                         <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
                         <p class="text-base text-[#12121299]">Red Dragon</p>
@@ -345,7 +345,7 @@
                                 onclick="my_modal_7.showModal()">Details</button>
                             <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
-                                    <img class="mx-40" src="images/fruit8.png" alt="">
+                                    <img class="mx-28 md:mx-40 lg:mx-44" src="images/fruit8.png" alt="">
                                     <h3 class="font-bold text-4xl">Orange</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
@@ -360,7 +360,7 @@
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
 
-                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                        <div class="flex justify-start items-center gap-8 mr-12 md:mr-20 lg:mr-24">
                                             <button class="btn text-color">Close</button>
                                             <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
                                                 Now</button>
@@ -373,7 +373,7 @@
                 </div>
                 <!-- Card 4  -->
                 <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
-                    <figure><img src="/images/fruit9.png" alt="Fruit" /></figure>
+                    <figure><img src="images/fruit9.png" alt="Fruit" /></figure>
                     <div class="card-body text-center">
                         <h2 class="text-2xl text-center font-bold mb-12">12.90$ - 18.85$</h2>
                         <p class="text-base text-[#12121299]">Banana</p>
@@ -390,7 +390,7 @@
                                 onclick="my_modal_8.showModal()">Details</button>
                             <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
-                                    <img class="mx-40" src="images/fruit9.png" alt="">
+                                    <img class="mx-28 md:mx-40 lg:mx-44" src="images/fruit9.png" alt="">
                                     <h3 class="font-bold text-4xl">Banana</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
@@ -405,7 +405,7 @@
                                     <div class="modal-action">
                                         <!-- if there is a button in form, it will close the modal -->
 
-                                        <div class="flex justify-start items-center gap-8 mr-24">
+                                        <div class="flex justify-start items-center gap-8 mr-12 md:mr-20 lg:mr-24">
                                             <button class="btn text-color">Close</button>
                                             <button class="btn bg-color text-white text-xl font-bold w-36 h-7 ">Buy
                                                 Now</button>
