done team section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <!-- Header Section Ends Here  -->
     <!-- Main Section Start Here  -->
     <main class="container mx-auto">
-        <section class="container mx-auto mt-6">
+        <section class="container mx-auto mt-10">
             <div class="flex flex-col md:flex-row justify-between px-3 md:gap-10 lg:gap-46">
                 <div class="text-center md:text-left lg:text-left space-y-5 mb-5">
                     <h2 class="text-[#121212] text-5xl font-bold">Deal of the day</h2>
@@ -422,9 +422,76 @@
                 <button class="btn bg-color w-36 h-16 text-white">Shop All</button>
             </div>
         </section>
-        <section class="container mx-auto mt-10">
 
+        <!-- Team Section Start Here  -->
+        <section class="container mx-auto mt-10">
+            <div class="hero min-h-screen" style="background-image: url('images/team.png');">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="text-center text-neutral-content mt-6">
+                    <div class="mb-12 px-2">
+                        <h1 class="mb-5 text-2xl md:text-4xl lg:text-5xl font-bold">Meet the team section</h1>
+                        <p class="mb-5 text-base lg:w-[615px] mx-auto">Contrary to popular belief, is not simply random
+                            text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
+                            years old.</p>
+                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                        <!-- Card 1  -->
+                        <div class="card w-52 mx-auto mb-6 bg-transparent">
+                            <figure><img class="mb-8 rounded-full" src="images/member1.png" alt="member" /></figure>
+                            <div class="space-y-2">
+                                <h2 class="text-white text-2xl font-bold">Awlad Hossain</h2>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center items-center gap-2">
+                                    <i class="fa-brands fa-facebook text-white text-lg"></i>
+                                    <i class="fa-brands fa-twitter text-white text-lg"></i>
+                                    <i class="fa-brands fa-linkedin-in text-white text-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 2  -->
+                        <div class="card w-52 mx-auto mb-6 bg-transparent">
+                            <figure><img class="mb-8 rounded-full" src="images/member2.png" alt="member" /></figure>
+                            <div class="space-y-2">
+                                <h2 class="text-white text-2xl font-bold">Safia Chowdhury</h2>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center items-center gap-2">
+                                    <i class="fa-brands fa-facebook text-white text-lg"></i>
+                                    <i class="fa-brands fa-twitter text-white text-lg"></i>
+                                    <i class="fa-brands fa-linkedin-in text-white text-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 3  -->
+                        <div class="card w-52 mx-auto mb-6 bg-transparent">
+                            <figure><img class="mb-8 rounded-full" src="images/member3.png" alt="member" /></figure>
+                            <div class="space-y-2">
+                                <h2 class="text-white text-2xl font-bold">Rokib Hossain</h2>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center items-center gap-2">
+                                    <i class="fa-brands fa-facebook text-white text-lg"></i>
+                                    <i class="fa-brands fa-twitter text-white text-lg"></i>
+                                    <i class="fa-brands fa-linkedin-in text-white text-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Card 4  -->
+                        <div class="card w-52 mx-auto mb-6 bg-transparent">
+                            <figure><img class="mb-8 rounded-full" src="images/member4.png" alt="member" /></figure>
+                            <div class="space-y-2">
+                                <h2 class="text-white text-2xl font-bold">Chaity</h2>
+                                <p>Fruits Expert</p>
+                                <div class="flex justify-center items-center gap-2">
+                                    <i class="fa-brands fa-facebook text-white text-lg"></i>
+                                    <i class="fa-brands fa-twitter text-white text-lg"></i>
+                                    <i class="fa-brands fa-linkedin-in text-white text-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- Team Section Start Here  -->
     </main>
     <!-- Main Section Ends Here  -->
     <!-- footer Section Start Here  -->
